--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Riccardo Grosso</h1>
+<h3>Personal home page</h3>
+<img src="http://placekitten.com/200/300">
 </body>
 </html>
