--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
 <h1>Riccardo Grosso</h1>
 <h3>Personal home page</h3>
-<img src="http://placekitten.com/200/300">
+<img src="http://placekitten.com.s3.amazonaws.com/homepage-samples/200/140.jpg">
 </body>
 </html>
