--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="user-scalable=yes, width=device-width, initial-scale=1.0, maximum-scale=1.0">
+	<link rel="shortcut icon" sizes="16x16 32x32 48x48 64x64" href="favicon.ico" />
 	<title>Riccardo Grosso | RP & Code</title>
 	<link rel="stylesheet" href="style.css">
 	<link href='http://fonts.googleapis.com/css?family=Noticia+Text' rel='stylesheet' type='text/css'>
