--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <div class="container">
 	<div class="content">
 		<div class="element">
-			<h1>Ciao,</h1>
-			<p>Mi chiamo
-			Riccardo Grosso e mi occupo di comunicazione e RP per aziende, istituzioni e associazioni. Attualmente sto terminando il corso di Laurea in <a href="http://www.uniud.it/didattica/facolta/lingue/relazioni_pubbliche">Relazioni Pubbliche</a> e sono alla ricerca di collaborazioni con professionisti nel settore della comunicazione.
+			<h1>Riccardo Grosso</h1>
+			<p>Ciao, mi chiamo
+			Riccardo e mi occupo di comunicazione e RP per aziende, istituzioni e associazioni. Attualmente sto terminando il corso di Laurea in <a href="http://www.uniud.it/didattica/facolta/lingue/relazioni_pubbliche">Relazioni Pubbliche</a> e sono alla ricerca di collaborazioni con professionisti nel settore della comunicazione.
 			</p>
 
 			<p>In passato mi sono occupato di creare <i>software e contenuti</i> per alcuni 
@@ -29,8 +29,8 @@
 			</p>
 
 			<p>
-			Se vuoi contattarmi puoi scrivermi  
-			<a href="mailto:me@riccardogrosso.org">un'email</a> o seguirmi 
+			Puoi contattarmi mandandomi   
+			<a href="mailto:me@riccardogrosso.org">un'email</a> o seguendomi 
 			su <a href="https://twitter.com/rgdotorg">Twitter</a>
 			.</p>
 			
