--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 		<div class="element">
 			<h1>Riccardo Grosso</h1>
 			<p>Ciao, mi chiamo
-			Riccardo e mi occupo di comunicazione e RP per aziende, istituzioni e associazioni. Attualmente sto terminando il corso di Laurea in <a href="http://www.uniud.it/didattica/facolta/lingue/relazioni_pubbliche">Relazioni Pubbliche</a> e sono alla ricerca di collaborazioni con professionisti nel settore della comunicazione.
+			Riccardo e mi occupo di comunicazione e RP per aziende, istituzioni e associazioni. 
 			</p>
 
 			<p>In passato mi sono occupato di creare <i>software e contenuti</i> per alcuni 
 			<a href="http://en.wikipedia.org/wiki/Interreg">progetti</a> di respiro internazionale. Oggi continuo a farlo per me stesso, semplicemente perchè mi piace.
 			Sono anche riuscito a pubblicare qualcosa su <a href="http://www.html.it">portali</a> italiani dedicati al settore IT.
+			Attualmente sto terminando il corso di Laurea in <a href="http://www.uniud.it/didattica/facolta/lingue/relazioni_pubbliche">Relazioni Pubbliche</a>.
 			</p>
 
 			<p>
